# data-project

bootstrap/: api-response.json  sftp-source.csv
services/: Dockerfile
services/config/: pyproject.toml
services/pipeline/sentiment-analisis/: landing.py  refined.py  submit_landing.sh  submit_refined.sh  submit_trusted.sh  trusted.py
