[tool.poetry]
name = "pyspark-gcp"
version = "0.1.0"
description = ""
authors = ["Savio Santos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pendulum = "^2.1.2"
pytest = "^7.2.0"
pyspark = "^3.2.0"
google-cloud-storage = "^1.45.0"
google-cloud-secret-manager = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
